Potential users done

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:M0f/S5KjIgJB+m3v05427je3tezIMF8vvK3WfYAwOh0=
+APP_KEY=base64:swECTfihojxmmI38pWFJl3OZ3sN6ecuwauCysqNu3JI=
 APP_DEBUG=true
-APP_URL=https://phplaravel-711732-2357923.cloudwaysapps.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=gfvfunzsra
-DB_USERNAME=gfvfunzsra
-DB_PASSWORD=7Mcgk7xZHu
+DB_PORT=8889
+DB_DATABASE=only_new
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
